# awesome-okf

./: .gitignore  CONTRIBUTING.md  README.en.md  README.md  index.md  log.md
docs/: blog-zh.md  code-support-research-zh.md  dogfooding-zh.md  html-first-class-proposal-zh.md  karpathy-llm-wiki-zh.md  okf-spec-zh.md  resources-zh.md
docs/upstream/: code.en.md  html.en.md  i18n.en.md  index.md
plugins/awesome-importer/: README.md  pyproject.toml
plugins/awesome-importer/src/awesome_importer/: __init__.py  cli.py  okf_writer.py  parser.py
plugins/awesome-to-okf/: README.md  pyproject.toml
plugins/awesome-to-okf/src/awesome_to_okf/: __init__.py  cli.py  okf_writer.py
plugins/feishu-okf/: README.md  pyproject.toml
plugins/feishu-okf/src/feishu_okf/: __init__.py  cli.py  client.py  okf.py
plugins/feishu-to-okf/: README.md  pyproject.toml
plugins/feishu-to-okf/src/feishu_to_okf/: __init__.py  cli.py  converter.py  okf.py
plugins/github-to-okf/: README.md  pyproject.toml
plugins/github-to-okf/src/github_to_okf/: __init__.py  cli.py  core.py  gh.py
plugins/html-to-okf/: README.md  pyproject.toml
plugins/html-to-okf/src/html_to_okf/: __init__.py  cli.py
plugins/myokf-cli/: README.md  pyproject.toml
plugins/myokf-cli/src/myokf/: __init__.py  cli.py
plugins/notion-to-okf/: README.md  pyproject.toml
plugins/notion-to-okf/src/notion_to_okf/: __init__.py  cli.py
plugins/obsidian-to-okf/: README.md  pyproject.toml
plugins/obsidian-to-okf/src/obsidian_to_okf/: __init__.py  cli.py
references/: deepagents-okf-backend.md  hermes-okf.md  index.md  karpathy-llm-wiki.md  kiso.md  knowledge-catalog-repo.md  launch-blog.md  metadata-as-code.md  okf-cli.md  okf-knowledge.md  okf-rag.md  okf-spec.md  okf-toolkit.md  okf-tools.md  okftool.md  owox-model-canvas.md  qmd.md  reference-implementations.md  sample-bundles.md  superops-okf.md  w4g1-okf.md  wiki-as-an-mcp.md
skills/awesome-to-okf/: SKILL.md
skills/book-to-okf/: SKILL.md
skills/code-to-okf/: SKILL.md
skills/code-to-okf/references/: code-okf-conventions.md
skills/github-to-okf/: SKILL.md
skills/okf-creator/: SKILL.md
skills/okf-creator/references/: okf-spec-cheatsheet.md
skills/okf-creator/scripts/: scaffold_okf.py  validate_okf.py
skills/okf-to-book/: SKILL.md
skills/okf-to-book/scripts/: okf_to_vitepress.py
skills/okf-to-web/: SKILL.md
skills/okf-to-web/scripts/: build_web.py  minify.mjs
