[project]
name = "awesome-to-okf"
version = "0.1.0"
description = "把 GitHub awesome-xx 列表转换为符合 OKF v0.1 的知识包(bundle)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "云中江树" }]
keywords = ["okf", "awesome", "github", "knowledge", "producer"]
dependencies = []  # 仅用标准库,开箱即跑

[project.scripts]
awesome-to-okf = "awesome_to_okf.cli:main"

[project.urls]
Homepage = "https://github.com/yzfly/awesome-okf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/awesome_to_okf"]
