[project]
name = "feishu-okf"
version = "0.1.0"
description = "把飞书(Feishu/Lark)知识库与文档导出为符合 OKF v0.1 的知识包(bundle)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "云中江树" }]
keywords = ["okf", "feishu", "lark", "knowledge", "producer", "wiki"]
dependencies = []  # 仅用标准库

[project.scripts]
feishu-okf = "feishu_okf.cli:main"

[project.urls]
Homepage = "https://github.com/yzfly/awesome-okf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feishu_okf"]
