[project]
name = "github-to-okf"
version = "0.1.0"
description = "把 GitHub 仓库(远程或本地)转换为符合 OKF v0.1 的知识包,应用 code-to-okf 约定"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "云中江树" }]
keywords = ["okf", "github", "code", "knowledge", "producer"]
dependencies = []

[project.scripts]
github-to-okf = "github_to_okf.cli:main"

[project.urls]
Homepage = "https://github.com/yzfly/awesome-okf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_to_okf"]
