[project]
name = "myokf-cli"
version = "0.1.0"
description = "OKF 统一命令行入口:把所有 producer / consumer / 工具收进一个 myokf 命令"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "云中江树" }]
keywords = ["okf", "cli", "knowledge", "producer", "consumer"]
dependencies = []

[project.scripts]
myokf = "myokf.cli:main"

[project.urls]
Homepage = "https://github.com/yzfly/awesome-okf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myokf"]
